--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">fishhunt</string>
-    <string name="btn_start_app">Start app!</string>
-    <string name="counter">1</string>
-    <string name="title">hello</string>
-    <string name="btn_1">button 1</string>
-    <string name="btn_2">button 2</string>
+    <string name="app_label"></string>
+    <string name="empty_text"> </string>
+    <string name="title_fish_hunt">Фотоохота</string>
+
 </resources>
