--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="play">Начать игру</string>
     <string name="call">ФОТООХОТА</string>
     <string name="menu">МЕНЮ</string>
+    <string name="fish">Ваша цель:</string>
 </resources>
