--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,13 @@
     <string name="call">ФОТООХОТА</string>
     <string name="menu">МЕНЮ</string>
     <string name="fish">Ваша цель:</string>
+    <string name="ye">ДА</string>
+    <string name="no">НЕТ</string>
+    <string name="ok">Верно!
+    Продолжим?</string>
+    <string name="notf">Не та рыбка...
+    Ещё разок?</string>
+    <string name="foto">Сделать фото</string>
+    <string name="dodo">Найдите</string>
+
 </resources>
